<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srlEnablePureScrollMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_general_information"
                android:textColor="@color/black_translucence" />

            <com.gofitness.view.LineItemView
                android:tag="@string/unit_cm"
                android:id="@+id/info_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemIsTop="true"
                app:itemLeftText="@string/info_height"
                app:itemRightText="@string/unit_null_cm" />

            <com.gofitness.view.LineItemView
                android:tag="@string/unit_kg"
                android:id="@+id/info_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemLeftText="@string/info_weight"
                app:itemRightText="@string/unit_null_kg" />

            <com.gofitness.view.LineItemView
                android:tag="@string/unit_percentage"
                android:id="@+id/info_body_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemIsBottom="true"
                app:itemLeftText="@string/info_body_fat"
                app:itemRightText="@string/unit_null_percentage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="三围"
                android:textColor="@color/black_translucence" />

            <com.gofitness.view.LineItemView
                android:tag="@string/unit_cm"
                android:id="@+id/info_chest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemIsTop="true"
                app:itemLeftText="@string/info_chest"
                app:itemRightText="@string/unit_null_cm" />

            <com.gofitness.view.LineItemView
                android:tag="@string/unit_cm"
                android:id="@+id/info_waist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemLeftText="@string/info_waist"
                app:itemRightText="@string/unit_null_cm" />

            <com.gofitness.view.LineItemView
                android:id="@+id/info_hips"
                android:tag="@string/unit_cm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:itemIsBottom="true"
                app:itemLeftText="@string/info_hips"
                app:itemRightText="@string/unit_null_cm" />

        </LinearLayout>

    </ScrollView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>